# governance-registry

./: Cargo.toml  README.md  coderrect.json  run-release.sh  run-rename.sh
.github/workflows/: ci-cargo-audit.yml  ci-lint-test.yml  ci-soteria.yml  soteria.yml
cli/: Cargo.toml
programs/voter-stake-registry/: Cargo.toml
programs/voter-stake-registry/src/: error.rs  governance.rs  lib.rs
programs/voter-stake-registry/src/instructions/: clawback.rs  close_deposit_entry.rs  close_voter.rs  configure_voting_mint.rs  create_deposit_entry.rs  create_exchange_rate.rs  create_registrar.rs  create_voter.rs  deposit.rs  grant.rs  internal_transfer.rs  internal_transfer_locked.rs  internal_transfer_unlocked.rs  mod.rs  reset_lockup.rs  update_max_vote_weight.rs  withdraw.rs
programs/voter-stake-registry/src/state/: deposit_entry.rs  lockup.rs  voting_mint_config.rs
programs/voter-stake-registry/tests/: test_all_deposits.rs  test_basic.rs  test_clawback.rs  test_deposit_cliff.rs  test_deposit_daily_vesting.rs  test_deposit_monthly_vesting.rs  test_deposit_no_locking.rs  test_grants.rs  test_internal_transfer.rs  test_reset_lockup.rs  test_voting.rs
programs/voter-stake-registry/tests/program_test/: addin.rs  governance.rs  mod.rs  solana.rs
scripts/: deposited.ts
src/: voter_stake_registry.json
