[workspace]
members = [
    "programs/*",
    # Drop everything below this line before running "anchor publish":
    # Otherwise the build will fail since Anchor uploads only parts of the source tree.
    "cli/"
]

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "66e4295fe0d2cc2456055bea50e8d227492bdbad" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "66e4295fe0d2cc2456055bea50e8d227492bdbad" }
